--- a/src/pages/Statistics/Statistics.scss
+++ b/src/pages/Statistics/Statistics.scss
@@ -1,34 +1,20 @@
 .Statistics {
     display: flex;
-    align-items: center;
+    align-items: self-start;
     justify-content: center;
 
     .isolated {
         position: relative;
-        // display: flex;
-        // align-items: self-start;
-        // justify-content: center;
+        display: flex;
+        align-items: self-start;
         z-index: 1;
         transition: .5s;
 
         &.isolated_extra {
             transform: translateX(-274px);
             transition: .5s;
-        }
-
-        .change_icon {
-            border: none;
-            margin: 0 auto;
-            position: absolute;
-            left: 270px;
-            top: -380px;
-            cursor: pointer;
-            .FaChevronDown{
-                height: 48px;
-                width: 48px;
-                transition: .3s;
-                color: white;
-            }
+            display: flex;
+            align-items: self-start;
         }
     }
 
@@ -39,9 +25,12 @@
         flex-direction: column;
         transition: .5s;
 
+
         &.combined_extra {
             transition: .5s;
             transform: translateX(274px);
+            overflow-x: hidden;
+            overscroll-behavior-x: contain;
         }
 
         .lol1234 {
