--- a/src/pages/Statistics/StatisticsTop/StatisticsTop.scss
+++ b/src/pages/Statistics/StatisticsTop/StatisticsTop.scss
@@ -153,7 +153,7 @@ $bg-white: #ffffff;
                 top: 90px;
                 left: -17px;
                 overflow: hidden;
-
+                z-index: 2;
 
                 span {
                     border: none;
@@ -255,6 +255,7 @@ $bg-white: #ffffff;
 
         .user-profile {
             cursor: pointer;
+            position: relative;
 
             .avatar-placeholder {
                 width: 35px;
@@ -263,6 +264,159 @@ $bg-white: #ffffff;
                 svg {
                     width: 100%;
                     height: 100%;
+                }
+            }
+
+            .profile_open {
+                position: absolute;
+                right: -80px;
+                top: 60px;
+                padding: 0px 20px 8px 30px;
+                border: 1px solid green;
+                border-radius: 10PX;
+                // height: 100vh;
+                background-color: white;
+                display: flex;
+                flex-direction: column;
+                align-items: start;
+                justify-content: center;
+                text-align: start;
+                width: 255px;
+
+                .icon_page {
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    column-gap: 23px;
+                    border-bottom: 1px solid gray;
+                    padding: 10px 0 10px 0;
+
+                    .icon_page_icon {
+                        background-color: gray;
+                        color: white;
+                        width: 44px;
+                        height: 44px;
+                        border-radius: 50px;
+                        padding: 8px;
+
+                        &:hover {
+                            box-shadow: 0 0 10px rgb(75, 73, 73);
+                        }
+                    }
+
+                    .render {
+                        h1 {
+                            font-weight: 500;
+                            font-size: 14px;
+                        }
+
+                        p {
+                            font-weight: 400;
+                            font-size: 10px;
+                        }
+                    }
+                }
+
+                .icon_page2 {
+                    border-bottom: 1px solid gray;
+                    padding: 10px 0 10px 0;
+
+                    h1 {
+                        font-weight: 300;
+                        font-size: 12px;
+                    }
+
+                    p {
+                        color: green;
+                        font-weight: 300;
+                        font-size: 10px;
+                    }
+                }
+
+                .icon_page3 {
+                    display: flex;
+                    align-items: self-start;
+                    justify-content: space-between;
+                    column-gap: 41px;
+                    border-bottom: 1px solid gray;
+                    padding: 10px 0 10px 0;
+
+                    .left {
+                        h1 {
+                            font-weight: 300;
+                            font-size: 12px;
+                            color: #0A3303;
+                        }
+
+                        p {
+                            font-weight: 300;
+                            font-size: 10px;
+                            color: #098445;
+                        }
+                    }
+
+                    .right {
+                        p {
+                            font-weight: 300;
+                            font-size: 10px;
+                            color: #098445;
+                        }
+                    }
+                }
+
+                .icon_page4 {
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    column-gap: 161px;
+                    border-bottom: 1px solid gray;
+                    padding: 10px 0 10px 0;
+
+                    h1 {
+                        font-weight: 500;
+                        font-size: 22px;
+                        color: #0A3303;
+                    }
+                    .icon_page_select{
+                        padding:2px 8px;
+                        border: none;
+                        font-weight: 500;
+                        font-size: 15px;
+                    }
+                }
+
+                .icon_page5 {
+                    border-bottom: 1px solid gray;
+                    padding: 10px 0 10px 0;
+
+                    h1 {
+                        font-weight: 500;
+                        font-size: 22px;
+                        color: #0A3303;
+                    }
+                }
+
+                .icon_page6 {
+                    border-bottom: 1px solid gray;
+                    padding: 10px 0 10px 0;
+
+                    h1 {
+                        font-weight: 500;
+                        font-size: 22px;
+                        color: #0A3303;
+                    }
+                }
+
+                .icon_page7 {
+                    border-bottom: 1px solid gray;
+                    padding: 10px 0 10px 0;
+                    a{
+                        text-decoration: none;
+                        color: red;
+                        &:hover{
+                            text-decoration: underline;
+                        }
+                    }
                 }
             }
         }
